--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-asdasdasdasd
+<html>
+<head>
+    <meta charset="utf-8">  <!-- 한글이 정상적으로 보이도록 설정 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- 모바일에서 콘텐츠 크기 최적화 -->
+    <title>HTML 기본 템플릿</title>
+    <link rel="stylesheet" type="text/css" href="filename.css">
+</head>
+<body>
+    <h1>
+    GREGOR
+</h1>
+<img src="gregor">
+
+</body>
+</html>
