--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
+<!DOCTYPE html>  <!-- HTML5 문서임을 알려줌 -->
 <html>
 <head>
     <meta charset="utf-8">  <!-- 한글이 정상적으로 보이도록 설정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">  <!-- 모바일에서 콘텐츠 크기 최적화 -->
-    <title>HTML 기본 템플릿</title>
-    <link rel="stylesheet" type="text/css" href="filename.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>index.html</title>
 </head>
-<body>
-    <h1>
-    GREGOR
-</h1>
-<img src="gregor">
 
+<body>
+    <div id="header">
+        <div id="logo"><a href="index.html"> PROJECT MOON </a></div>
+
+        <div id="navmenu">
+            <a href="https://projectmoon.studio/" 
+            target="_blank">STUDIO</a>
+        </div>
+    </div>
+
+    <div id="main-container">
+        <div id="featured-image"><img src="프로젝트문-로고.png"></div>
+
+        <div id="main-text">
+            <p>로보토미 코퍼레이션, 라이브러리 오브 루이나, 림버스 컴퍼니 등, 독특한 세계관과 매력적인 캐릭터들로 이야기를 이끌어나가는 프로젝트문 스튜디오 입니다. 언제나 독창적인 아이디어들로 사용자를 매료시키는 게임을 디자인하는 회사로서, 강렬한 스토리와 인상깊은 경험을 드리기 위해 항상 최선을 다하고 있습니다.</p>
+        </div>
+
+        <div id="copyright">Copyright &copy; project_moon</div>
+    </div>
 </body>
 </html>
